# geant4-wasm-performance

./: .gitignore  README.md  buildExample.sh  buildGeant.sh  buildGeant_old.sh  hostExample.sh  runNativeExample.sh  runTest.sh
example/B1/: CMakeLists.txt  exampleB1.cc  exampleB1.in  g4geom.txt  setup_env.js
example/B1/include/: B1DetectorConstructionTxt.hh  B1EventAction.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  B1SteppingAction.hh
example/B1/src/: B1DetectorConstruction.cc  B1DetectorConstructionTxt.cc  B1EventAction.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SteppingAction.cc
example/web/: shell_minimal_worker.html  worker.js
test/: .gitignore  index.js  package-lock.json  package.json  ps_mem.py  watch_memory.py
test-python/: .gitignore  init.md  main.py  parser.py  ps_mem.py  results.ipynb  test.py  test_example.py
